# chainscope

./: .env.example  .gitignore  Cargo.toml  README.md  chainscope.toml  docker-compose.yml
bins/api/: Cargo.toml
bins/api/src/: main.rs
bins/indexer/: Cargo.toml
bins/indexer/src/: config.rs  consumer.rs  db.rs  lib.rs  main.rs  producer.rs  supervisor.rs  testkit.rs  transformer.rs
bins/indexer/tests/: crash_resumability.rs  live_pipeline.rs  seam_is_not_leaking.rs  writer_db.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  source.rs  transport.rs  types.rs
crates/eth-source/: Cargo.toml
crates/eth-source/src/: decode.rs  lib.rs  rows.rs
migrations/: 0001_chain_state.sql  0002_pools.sql  0003_blocks.sql  0004_swaps.sql  0005_liq_events.sql  0006_partitions.sql  0007_ohlcv.sql  0008_wallets.sql  0009_alerts.sql
