[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/eth-source",
    "bins/indexer",
    "bins/api",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/ozpool/chainscope"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
