[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/eth-source",
    "bins/indexer",
    "bins/api",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/0xfandom/chainscope"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "bigdecimal",
    "chrono",
] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
hex = "0.4"
url = "2"
async-trait = "0.1"
bigdecimal = "0.4"
