[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/eth-source",
    "bins/indexer",
    "bins/api",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/0xfandom/chainscope"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "bigdecimal",
    "chrono",
] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
hex = "0.4"
url = "2"
async-trait = "0.1"
tokio-util = "0.7"
rand = "0.9"
bigdecimal = "0.4"
# Kept out of the workspace-wide default on purpose: only crates/eth-source may
# depend on this. If it ever appears under crates/core, the chain boundary has
# been crossed.
alloy = { version = "2", default-features = false, features = [
    "providers",
    "rpc-types-eth",
    "transport-http",
    "reqwest-rustls-tls",
    "json-rpc",
    "sol-types",
] }
