[package]
name = "chainscope-api"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "chainscope-api"
path = "src/main.rs"

[dependencies]
chainscope-core = { path = "../../crates/core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
