[package]
name = "chainscope-indexer"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "chainscope-indexer"
path = "src/main.rs"

[dependencies]
chainscope-core = { path = "../../crates/core" }
chainscope-eth-source = { path = "../../crates/eth-source" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
serde.workspace = true
figment.workspace = true
hex.workspace = true
url.workspace = true
tokio-util.workspace = true
rand.workspace = true

[dev-dependencies]
# Only the tests implement ChainSource by hand (the mock source); the binary
# itself only ever consumes the trait.
async-trait.workspace = true
# `test` brings in figment::Jail, which gives each test its own temporary
# directory and environment and restores both afterwards — the only safe way to
# test environment-variable layering, since the environment is process-global.
figment = { version = "0.10", features = ["toml", "env", "test"] }
