[package]
name = "chainscope-eth-source"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
chainscope-core = { path = "../core" }
alloy.workspace = true
async-trait.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
